# yew-min-wbg

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
src/: components.rs  lib.rs
static/: index.html
