[package]
name = "yew_min_wbg"
version = "0.1.0"
authors = ["Mikhail \"L117\" Nikolenko <l117@l117.xyz>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
yew = { version = "0.15", features = ["web_sys"] }
wasm-bindgen = "0.2.58"
web_logger = "0.2"
web-sys = { version = "0.3.4" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
